// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render facets for developer 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "ProjectFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
]
`;

exports[`should render facets for directory 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for global page 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "ProjectFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for module 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for project 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets when my issues are selected 1`] = `
Array [
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "StandardFacet",
  "TagFacet",
  "ProjectFacet",
  "AuthorFacet",
]
`;
